package eapli.ecourse.coursemanagement.domain;

public enum State {
    CLOSE, OPEN, ENROLL, INPROGRESS
}
