package eapli.ecourse.exammanagment.domain;

/**
 * Feedback type of Exam
 */
public enum FeedbackType {
    NONE, ON_SUBMISSION, AFTER_CLOSING
}
