package eapli.ecourse.exammanagment.domain;

/**
 * Grade type of Exam
 */
public enum GradeType {
    NONE, ON_SUBMISSION, AFTER_CLOSING
}
